k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calypso
  labels:
    app.kubernetes.io/managed-by: calypso
